--- a/Working_OpenShift_Example/wsgi/templates/code.html
+++ b/Working_OpenShift_Example/wsgi/templates/code.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width; initial-scale=0.6; maximum-scale=1.0;"/>
     <title>FlairGen</title>
     <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico"/>
