--- a/static/style.css
+++ b/static/style.css
@@ -21,7 +21,7 @@ input[type="radio"]:checked+label span {background:url('good.png')no-repeat;}
 .submit input{width:auto;padding:7px 12px 5px 12px;background:#617798;border:0;font-size:17px;color:#FAFAFA;cursor:pointer;-webkit-appearance:none;}
 .codetable{width:100%;color:#333333;}
 .codetable table {margin:auto;}
-.codetable caption{font-family:'Freshman';padding-bottom:4px;background:#b5af9e;padding-top:6px;}
+.codetable caption{font-family:'Freshman';font-weight:normal;padding-bottom:4px;background:#b5af9e;padding-top:6px;}
 .codetable th{font-family:'Freshman';font-weight:normal;padding-top:4px;padding-bottom:4px;background:#b5af9e;}
 .codetable td{padding-top:4px;width:500px;background:#CCCCCC;font-size:14px;cursor:pointer;}
 .codetable td:hover{background-color:#b2af9e;}
@@ -35,8 +35,8 @@ body{background-image:url('http://res.cloudinary.com/henrygd/image/upload/v14106
 .headertext{font-size:44px;}
 .splash-container{background-image:url('http://res.cloudinary.com/henrygd/image/upload/v1410680381/chuck.jpg');background-attachment:fixed;background-size:100%;height:100%;z-index:-1;overflow:hidden;position:absolute!important;}
 .splash{top:30%;top:25vh;left:0;bottom:0;right:0;position:absolute;}
-.ribbon{display:block;background-color: #000066;overflow:hidden;white-space:nowrap;position:fixed;z-index:2;left:-50px;top:40px;-webkit-transform:rotate(-45deg);transform:perspective(9999px)rotate(-45deg);-webkit-box-shadow: 0 0 10px;box-shadow: 0 0 10px;}
-.ribbon a{border:1px solid #ffcc33;color:#ffcc33;display:block;font:90%'Freshman',Arial,sans-serif;padding:8px 50px;text-align:center;text-decoration: none;/*text-shadow: 0 0 5px #000;*/}
+.ribbon{display:block;background-color: #000066;overflow:hidden;white-space:nowrap;position:fixed;z-index:2;left:-59px;top:48px;-webkit-transform:rotate(-45deg);transform:perspective(9999px)rotate(-45deg);-webkit-box-shadow: 0 0 10px;box-shadow: 0 0 10px;}
+.ribbon a{border:1px solid #ffcc33;color:#ffcc33;display:block;font:95%'Freshman',Arial,sans-serif;padding:10px 50px;text-align:center;text-decoration: none;/*text-shadow: 0 0 5px #000;*/}
 .makepeopleangry{font-size:12px;color:#d9d6d6;}
 .down{display:block;}
 .babel{font-size:13px;position:absolute;bottom:0;left:0;right:0;}
@@ -48,8 +48,3 @@ textarea{width:800px;height:120px;}
 input:hover, textarea:hover, input:focus, textarea:focus{border-color:#dbdbdb;-webkit-box-shadow:rgba(0, 0, 0, 0.4) 0px 0px 12px;}
 .fone{background:black;opacity:0.7;color:white;height:100px;} 
 .codetable {opacity:0.75;font-weight: bolder;}
-.codetable caption{font-weight:normal;font-size:1.1vw;}
-.codetable td{width:38vw;font-size:1.1vw;}
-.tspan{font-size:30px;font-size:2.5vw}
-.qckscroll{font-size:13.5px;font-size:1.1vw;}
-.qckscroll a{padding: 0.4vw 0.6vw 0.2vw 0.6vw;}}
