--- a/templates/form.html
+++ b/templates/form.html
@@ -13,7 +13,7 @@
 
   <body>
     <div class="ribbon">
-      <a href="https://github.com/henrygd/FlairGen">Fork me on GitHub</a>
+      <a href="https://github.com/henrygd/FlairGen">Contribute on GitHub</a>
     </div>
     <div class=splash-container>
       <div class=splash>
