--- a/static/style.css
+++ b/static/style.css
@@ -1,29 +1,29 @@
 @font-face{font-family:'Freshman';src:url('Freshman.woff') format('woff');font-weight:normal;font-style:normal;}
 @font-face{font-family:'HansKendrick';src:url('HansKendrick.svg') format('svg'),url('HansKendrick.woff') format('woff');font-weight:normal;font-style:normal;}
-body{background-color:#EBEBEB;margin:0;text-align:center;font-size:14px;color:#333333;font-family:'HansKendrick';}
+body{background-color:#EBEBEB;margin:0;text-align:center;font-size:1em;color:#333333;font-family:'HansKendrick';}
 .headertext {font-family:'Freshman';font-size:40px;text-shadow:gray 0px 1px 2px;}
 .splash-container{background-color:#EBEBEB;width:100%;}
 .splash{top:50px;left:0;bottom:0;right:0;margin-top: 20px;}
 .ribbon{display:none;}
-.makepeopleangry{font-size:5px;color:#e2e0e0;}
+.makepeopleangry{font-size:0.4px;color:#e2e0e0;}
 .down{display:none;}
-.babel{font-size:14px;font-size:2.6vw;margin: 0px 5px 10px 5px;}
+.babel{font-size:0.7em;margin: 0px 5px 10px 5px;}
 .sandbox{background-color:#333333;overflow:hidden;color:#EBEBEB;}
-.header2{font-size:30px;font-size:6.5vw;margin-bottom:-0.2em;}
-.sub{font-size:15.5px;font-size:2.6vw;line-height:95%}
+.header2{font-size:2em;margin-bottom:-0.2em;}
+.sub{font-size:0.9em;line-height:95%}
 input, textarea{padding:9px;border:solid 1px #CCCCCC;outline:0;font:16px/125% 'HansKendrick';;box-shadow:rgba(0,0,0, 0.2) 0px 0px 12px;-webkit-box-shadow:rgba(0,0,0, 0.2) 0px 0px 12px;}
 textarea{width:90%;height:100px;}
-hr{width: 45vw;}
+hr{width: 310px;}
 .form label{color:#7a7a7a;}
 input[type="radio"]{display:none;}
 input[type="radio"]+label span{display:inline-block;width:24px;height:25px;background:url('nogood.png')no-repeat;cursor:url('http://res.cloudinary.com/henrygd/image/upload/v1411702890/cleat.png'),pointer;}
 input[type="radio"]:checked+label span {background:url('good.png')no-repeat;}
 .submit input{width:auto;padding:7px 12px 5px 12px;background:#617798;border:0;font-size:17px;color:#FAFAFA;cursor:pointer;-webkit-appearance:none;}
 .codetable{width:100%;color:#333333;}
-.codetable table {margin:auto;}
+.codetable table {margin:auto;width:95%;}
 .codetable caption{font-family:'Freshman';font-weight:normal;padding-bottom:4px;background:#b5af9e;padding-top:6px;}
 .codetable th{font-family:'Freshman';font-weight:normal;padding-top:4px;padding-bottom:4px;background:#b5af9e;}
-.codetable td{padding-top:4px;width:500px;background:#CCCCCC;font-size:14px;cursor:pointer;}
+.codetable td{padding-top:4px;background:#CCCCCC;font-size:14px;cursor:pointer;}
 .codetable td:hover{background-color:#b2af9e;}
 .tspan{font-size:30px;}
 .qckscroll{font-size:14px;line-height:220%;font-weight:bolder;opacity:none;}
@@ -41,10 +41,10 @@ body{background-image:url('http://res.cloudinary.com/henrygd/image/upload/v14106
 .down{display:block;}
 .babel{font-size:13px;position:absolute;bottom:0;left:0;right:0;}
 .sandbox{background-image:url('http://res.cloudinary.com/henrygd/image/upload/v1411869067/harmon.jpg');z-index:1;background-size:100%;background-attachment:fixed;top:100%;width:100%;min-height:100%;position:absolute!important;}
-hr{display:block;position:relative;padding:0;height:0;width:320px;max-height:0;line-height:0;clear:both;border:none;border-bottom:1px solid #ffffff;}
 .header2{font-size:30px;}
 .sub{font-size:15.5px;margin-top:-5px;}
 textarea{width:800px;height:120px;}
 input:hover, textarea:hover, input:focus, textarea:focus{border-color:#dbdbdb;-webkit-box-shadow:rgba(0, 0, 0, 0.4) 0px 0px 12px;}
 .fone{background:black;opacity:0.7;color:white;height:100px;} 
-.codetable {opacity:0.75;font-weight: bolder;}
+.codetable {opacity:0.75;font-weight:bolder;}
+.codetable table {margin:auto;width:1000px;}
