--- a/templates/code.html
+++ b/templates/code.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="ribbon">
-      <a href="https://github.com/henrygd/FlairGen">Fork me on GitHub</a>
+      <a href="https://github.com/henrygd/FlairGen">Contribute on GitHub</a>
     </div>
       <p style="font-weight:strong;font-size: 17px;">Copy the text below and paste in the reddit comment box<br><span class=down>Tip: click in the box and hit Ctrl + A to select all, Ctrl + C to copy (or ⌘+A ⌘+C)</span></p><br>
         <textarea spellcheck="false" style="font-size:11px;color:maroon;background-color:transparent;width:80%;height:400px;height:60vh;">{{ output }}</textarea>
